--- a/ArboData.html
+++ b/ArboData.html
@@ -15,6 +15,21 @@
 	<script src="include/d3.js" charset="utf-8"></script>
 	<script src="include/c3.js" charset="utf-8"></script>
 <script src="http://fb.me/react-0.13.0.js"></script>
+	
+	
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.css"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.css"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.js"></script>
+	
+	
+	
+	
+	
+	
+	
 
 <style>
 div.container {
