--- a/Dforest2.html
+++ b/Dforest2.html
@@ -16,14 +16,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.css"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.css"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.js"></script>
+    <script  src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.js"></script>
 	  
 	  
 	  
-	 <script="https://rotjum.github.io/test/include/d3.min.js"></script>
- <script="https://rotjum.github.io/test/include/c3.js"></script>
- <script="https://rotjum.github.io/test/include/c3.min.css"></script>
- <script="https://rotjum.github.io/test/include/c3.css"></script>
+	 <script type="text/javascript" src="https://rotjum.github.io/test/include/d3.min.js"></script>
+ <script type="text/javascript" src="https://rotjum.github.io/test/include/c3.js"></script>
+ <script type="text/javascript" src="https://rotjum.github.io/test/include/c3.min.css"></script>
+ <script type="text/javascript" src="https://rotjum.github.io/test/include/c3.css"></script>
 	  
 	  
 	  
