--- a/Dforest2.html
+++ b/Dforest2.html
@@ -20,10 +20,10 @@
 	  
 	  
 	  
-	 <script type="text/javascript" src="https://rotjum.github.io/test/include/d3.min.js"></script>
- <script type="text/javascript" src="https://rotjum.github.io/test/include/c3.js"></script>
- <script type="text/javascript" src="https://rotjum.github.io/test/include/c3.min.css"></script>
- <script type="text/javascript" src="https://rotjum.github.io/test/include/c3.css"></script>
+	 <script src="https://rotjum.github.io/test/include/d3.min.js"></script>
+ <script src="https://rotjum.github.io/test/include/c3.js"></script>
+ <script src="https://rotjum.github.io/test/include/c3.min.css"></script>
+ <script src="https://rotjum.github.io/test/include/c3.css"></script>
 	  
 	  
 	  
