--- a/Dforest2.html
+++ b/Dforest2.html
@@ -21,11 +21,11 @@
 	  
 	  
 	  
-	 <script src="https://rotjum.github.io/test/include/d3.min.js"></script>
 	
- <script src="https://rotjum.github.io/test/include/c3.js"></script>
- <script src="https://rotjum.github.io/test/include/c3.min.css"></script>
- <script src="https://rotjum.github.io/test/include/c3.css"></script>
+     <script src="https://raw.githubusercontent.com/RotJum/test/master/include/c3.js"></script>
+<script src="https://raw.githubusercontent.com/RotJum/test/master/include/d3.min.js"></script>
+<script src="https://raw.githubusercontent.com/RotJum/test/master/include/c3.min.css"></script>
+<script src="https://raw.githubusercontent.com/RotJum/test/master/include/c3.css"></script>
 	  
 	  
 	  
